--- a/src/main/resources/theme/play/create_game.fxml
+++ b/src/main/resources/theme/play/create_game.fxml
@@ -15,7 +15,12 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
-<GridPane xmlns:fx="http://javafx.com/fxml/1" fx:id="createGameRoot" hgap="10.0" styleClass="create-game-root" vgap="10.0" xmlns="http://javafx.com/javafx/8.0.141" fx:controller="com.faforever.client.game.CreateGameController">
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.AnchorPane?>
+<StackPane xmlns:fx="http://javafx.com/fxml/1" fx:id="createGameRoot" alignment="CENTER" xmlns="http://javafx.com/javafx/8.0.141"
+           fx:controller="com.faforever.client.game.CreateGameController" onMouseClicked="#onDimmerClicked" styleClass="dimmer">
+    <AnchorPane maxWidth="1000" minWidth="880" onMouseClicked="#onContentPaneClicked" styleClass="modal-popup">
+    <GridPane hgap="10.0" vgap="10.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
     <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="256.0" />
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="256.0" />
@@ -43,11 +48,11 @@
         <Label alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308" text="%game.create.rating" textAlignment="JUSTIFY" GridPane.columnIndex="2" GridPane.rowIndex="1" />
         <HBox alignment="CENTER" maxWidth="1.7976931348623157E308" spacing="10.0" GridPane.columnIndex="3" GridPane.columnSpan="2147483647" GridPane.rowIndex="1">
             <children>
-                <JFXTextField fx:id="minRankingTextField" minWidth="30.0" prefWidth="60.0" promptText="%games.create.minRating" HBox.hgrow="NEVER" />
                 <Label text="%games.create.minRating" />
+                <JFXTextField fx:id="minRankingTextField" minWidth="30.0" prefWidth="40.0" promptText="%games.create.minRating" HBox.hgrow="NEVER" />
                 <Pane minHeight="0.0" minWidth="0.0" HBox.hgrow="ALWAYS" />
                 <Label text="%games.create.maxRating" />
-                <JFXTextField fx:id="maxRankingTextField" minWidth="30.0" prefWidth="60.0" promptText="%games.create.maxRating" HBox.hgrow="NEVER" />
+                <JFXTextField fx:id="maxRankingTextField" minWidth="30.0" prefWidth="40.0" promptText="%games.create.maxRating" HBox.hgrow="NEVER" />
             </children>
             <padding>
                 <Insets left="2.0" right="2.0" top="2.0" />
@@ -134,15 +139,7 @@
         	</graphic>
        	</JFXButton>
         
-        <!-- Cancel, Ok -->
-        <JFXButton mnemonicParsing="false" onAction="#onCloseButtonClicked" text="%cancel"
-        		 styleClass="more-button-padding"
-        		 GridPane.halignment="LEFT" GridPane.columnIndex="0" GridPane.rowIndex="8">
-        	<GridPane.margin><Insets top="15"/></GridPane.margin>
-        	<padding>
-				<Insets left="100.0" right="100.0" />
-			</padding>
-        </JFXButton>
+        <!-- Ok -->
         <JFXButton fx:id="createGameButton" defaultButton="true" minWidth="-Infinity" mnemonicParsing="false" onAction="#onCreateButtonClicked" text="%game.create.create"
         		 styleClass="more-button-padding"
         		 GridPane.halignment="RIGHT" GridPane.columnIndex="3" GridPane.rowIndex="8" GridPane.columnSpan="2">
@@ -153,7 +150,12 @@
         </JFXButton>
         			
     </children>
+    </GridPane>
+        <JFXButton cancelButton="true" focusTraversable="false" onAction="#onCloseButtonClicked" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0"
+                   styleClass="window-button, close-button">
+        </JFXButton>
+    </AnchorPane>
     <padding>
-        <Insets left="20.0" right="20.0" />
+        <Insets bottom="40.0" left="40.0" right="40.0" top="40.0" />
     </padding>
-</GridPane>
+</StackPane>
