--- a/src/main/resources/theme/play/play.fxml
+++ b/src/main/resources/theme/play/play.fxml
@@ -1,66 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
-<?import javafx.scene.Group?>
-<?import javafx.scene.layout.VBox?>
-<VBox xmlns:fx="http://javafx.com/fxml/1" fx:id="playRoot" maxHeight="1.7976931348623157E308"
-      xmlns="http://javafx.com/javafx/8.0.60" fx:controller="com.faforever.client.play.PlayController">
-    <children>
-        <TabPane fx:id="playRootTabPane" rotateGraphic="true" side="LEFT" tabClosingPolicy="UNAVAILABLE"
-                 tabMaxHeight="170.0"
-                 tabMinHeight="170.0" VBox.vgrow="ALWAYS">
-            <tabs>
-                <Tab fx:id="customGamesTab">
-                    <content>
-                        <fx:include source="custom_games.fxml" fx:id="customGames"/>
-                    </content>
-                    <graphic>
-                        <Group>
-                            <children>
-                                <VBox prefWidth="170.0" rotate="90.0">
-                                    <children>
-                                        <Label text="%play.custom" styleClass="tab-label"/>
-                                    </children>
-                                </VBox>
-                            </children>
-                        </Group>
-                    </graphic>
-                </Tab>
-                <Tab fx:id="ladderTab">
-               <content>
-                   <fx:include source="ranked_1v1.fxml" fx:id="ladder"/>
-               </content>
-               <graphic>
-                  <Group>
-                     <children>
-                         <VBox prefWidth="170.0" rotate="90.0">
-                           <children>
-                               <Label text="%play.ranked1v1" styleClass="tab-label"/>
-                           </children>
-                        </VBox>
-                     </children>
-                  </Group>
-               </graphic>
-            </Tab>
-                <Tab fx:id="coopTab">
-                    <content>
-                        <fx:include source="coop/coop.fxml" fx:id="coop"/>
-                    </content>
-                    <graphic>
-                        <Group>
-                            <children>
-                                <VBox prefWidth="170.0" rotate="90.0">
-                                    <children>
-                                        <Label text="%play.coop" styleClass="tab-label"/>
-                                    </children>
-                                </VBox>
-                            </children>
-                        </Group>
-                    </graphic>
-                </Tab>
-            </tabs>
-        </TabPane>
-    </children>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+
+<VBox xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="com.faforever.client.play.PlayController">
+    <HBox fx:id="playRoot">
+        <Pane prefWidth="65.0"/>
+        <ToggleButton fx:id="customGamesButton" mnemonicParsing="false" onAction="#onNavigateButtonClicked"
+                      styleClass="navigation-button" text="%play.custom">
+            <toggleGroup>
+                <ToggleGroup fx:id="playNavigation"/>
+            </toggleGroup>
+        </ToggleButton>
+        <ToggleButton fx:id="ladderButton" mnemonicParsing="false" onAction="#onNavigateButtonClicked"
+                      styleClass="navigation-button" text="%play.ranked1v1" toggleGroup="$playNavigation">
+        </ToggleButton>
+        <ToggleButton fx:id="coopButton" mnemonicParsing="false" onAction="#onNavigateButtonClicked"
+                      styleClass="navigation-button" text="%play.coop" toggleGroup="$playNavigation">
+        </ToggleButton>
+    </HBox>
+    <Separator prefWidth="300.0"/>
+    <AnchorPane fx:id="contentPane" maxHeight="1.7976931348623157E308"
+                maxWidth="1.7976931348623157E308"
+                VBox.vgrow="ALWAYS"/>
 </VBox>
