--- a/src/main/resources/theme/play/custom_games.fxml
+++ b/src/main/resources/theme/play/custom_games.fxml
@@ -17,7 +17,6 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.layout.VBox?>
 <StackPane xmlns:fx="http://javafx.com/fxml/1" fx:id="gamesRoot" alignment="TOP_CENTER"
            xmlns="http://javafx.com/javafx/10.0.2" fx:controller="com.faforever.client.game.CustomGamesController">
     <children>
@@ -28,14 +27,12 @@
             </columnConstraints>
             <rowConstraints>
                 <RowConstraints vgrow="NEVER"/>
-                <RowConstraints minHeight="10.0" vgrow="ALWAYS"/>
+                <RowConstraints vgrow="ALWAYS"/>
             </rowConstraints>
             <children>
-                <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="10.0">
-                    <children>
                         <HBox spacing="5.0">
                             <children>
-                                <FlowPane hgap="10.0" maxWidth="1.7976931348623157E308" vgap="10.0" HBox.hgrow="ALWAYS">
+                                <FlowPane hgap="10.0" maxWidth="1.7976931348623157E308" vgap="10.0" HBox.hgrow="SOMETIMES">
                                     <children>
                                         <JFXButton fx:id="createGameButton" defaultButton="true" minWidth="-Infinity"
                                                    mnemonicParsing="false" onAction="#onCreateGameButtonClicked"
@@ -74,20 +71,21 @@
                                     </graphic>
                                 </ToggleButton>
                             </children>
+                            <padding>
+                                <Insets bottom="10.0" left="20.0" right="10.0" top="10.0"/>
+                            </padding>
                         </HBox>
-                    </children>
-                    <padding>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
-                    </padding>
-                </VBox>
                 <ScrollPane fx:id="gameDetailPane" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1"
-                            GridPane.rowSpan="2147483647">
+                            GridPane.rowSpan="2">
                     <content>
                         <fx:include fx:id="gameDetail" source="game_detail.fxml"/>
                     </content>
                 </ScrollPane>
-                <AnchorPane fx:id="gameViewContainer" maxHeight="1.7976931348623157E308"
-                            maxWidth="1.7976931348623157E308" prefWidth="10000" GridPane.rowIndex="1"/>
+                <AnchorPane fx:id="gameViewContainer" prefWidth="10000" prefHeight="10" GridPane.rowIndex="1">
+                    <padding>
+                        <Insets left="20"/>
+                    </padding>
+                </AnchorPane>
             </children>
         </GridPane>
     </children>
