--- a/src/main/resources/theme/style.css
+++ b/src/main/resources/theme/style.css
@@ -932,13 +932,18 @@
 .button.more-button-padding {
   -fx-padding: 0.7em 5em;
 }
+
 .button-mini-label {
   -fx-font-size: 0.7em;
   -fx-background-radius: 3;
   -fx-padding: 0.16em 0.4em;
-  
+
   -fx-text-fill: -fx-dark-text-color;
   -fx-background-color: -orange-500;
+}
+
+.create-game-dual-list-cell > .right-label {
+  -fx-text-fill: -fx-mid-text-color;
 }
 
 /***************** Settings window *****************/
