--- a/src/main/resources/theme/settings/settings.fxml
+++ b/src/main/resources/theme/settings/settings.fxml
@@ -153,7 +153,7 @@
                                  <children>
                                     <Label styleClass="setting-title" text="%settings.general.cacheLifeTime" wrapText="true" />
                                     <Label styleClass="setting-description" text="%settings.general.advancedIceLog.description" GridPane.columnSpan="2147483647" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" />
-                                    <CheckBox fx:id="cacheLifeTimeTextField" GridPane.columnIndex="1" />
+                                    <TextField fx:id="cacheLifeTimeTextField" GridPane.columnIndex="1" />
                                  </children>
                               </GridPane>
                            </children>
