Team Matchmaker Integration (#2059)
Integrate TMM server messages and api objects

Add TMM UI tab in place of ladder 1v1 tab

Co-authored-by: geosearchef <geosearchef@googlemail.com>
Co-authored-by: alexander <alexander.von.trostorff@gmail.com>
Co-authored-by: Michel Jung <michel.jung89@gmail.com>

--- a/src/main/resources/theme/main.fxml
+++ b/src/main/resources/theme/main.fxml
@@ -48,7 +48,7 @@
                                     styleClass="main-navigation-button" text="%main.chat"
                                     toggleGroup="$mainNavigation"/>
                       <ToggleButton fx:id="playButton" minWidth="-Infinity" mnemonicParsing="false"
-                                    onAction="#onNavigateButtonClicked" styleClass="main-navigation-button"
+                                    onAction="#onPlay" styleClass="main-navigation-button"
                                     text="%main.play" toggleGroup="$mainNavigation"/>
                       <ToggleButton fx:id="replayButton" minWidth="-Infinity" mnemonicParsing="false"
                                     onAction="#onNavigateButtonClicked" styleClass="main-navigation-button"
