--- a/src/main/resources/theme/play/play.fxml
+++ b/src/main/resources/theme/play/play.fxml
@@ -8,11 +8,11 @@
     <children>
         <TabPane fx:id="playRootTabPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" tabClosingPolicy="UNAVAILABLE" VBox.vgrow="ALWAYS">
             <tabs>
+                <Tab fx:id="teamMatchmakingTab" text="%play.teamMatchmaking">
+                    <fx:include source="team_matchmaking.fxml" fx:id="teamMatchmaking"/>
+                </Tab>
                 <Tab fx:id="customGamesTab" text="%play.custom">
                     <fx:include fx:id="customGames" source="custom_games.fxml" />
-                </Tab>
-                <Tab fx:id="ladderTab" text="%play.ranked1v1">
-                    <fx:include fx:id="ladder" source="ranked_1v1.fxml" />
                 </Tab>
                 <Tab fx:id="coopTab" text="%play.coop">
                     <fx:include fx:id="coop" source="coop/coop.fxml" />
