--- a/src/main/resources/theme/chat/channel_tab.fxml
+++ b/src/main/resources/theme/chat/channel_tab.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.Tab?>
@@ -78,16 +77,9 @@
                             <Insets left="10.0" right="10.0"/>
                         </VBox.margin>
                     </HBox>
-                    <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-                                VBox.vgrow="ALWAYS">
-                        <children>
-                            <ListView fx:id="chatUserListView" maxHeight="1.7976931348623157E308"
-                                      maxWidth="1.7976931348623157E308" styleClass="chat-user-list-view"
-                                      AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
-                                      AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                            </ListView>
-                        </children>
-                    </AnchorPane>
+                    <VBox fx:id="chatUserListViewBox" maxHeight="1.7976931348623157E308"
+                          maxWidth="1.7976931348623157E308"
+                          VBox.vgrow="ALWAYS"/>
                 </children>
           </VBox>
         </SplitPane>
