--- a/src/main/resources/theme/colors.css
+++ b/src/main/resources/theme/colors.css
@@ -25,7 +25,7 @@
   REVIEW_SCORE_2: #e9985d;
   REVIEW_SCORE_1: #ae453b;
 
-  DISCORD_COLOR: #7289DA;
+  DISCORD_COLOR: #7289da;
 
   -divider-color: #424242;
   -card-color: #424242CC;
