--- a/src/main/resources/theme/style.css
+++ b/src/main/resources/theme/style.css
@@ -550,7 +550,7 @@
   -fx-background-color: null;
 }
 
-.inbox-icon, .discord-icon {
+.inbox-icon {
   -fx-background-color: -fx-light-text-color;
   -fx-min-width: 2em;
   -fx-max-width: 2em;
@@ -749,6 +749,18 @@
   -fx-background-color: transparent;
   -fx-border-width: 2 0 0 0;
   -fx-border-color: #424242;
+}
+
+.discord-color {
+  -fx-background-color: DISCORD_COLOR;
+}
+
+.discord-icon-background {
+  -fx-background-color: white;
+}
+
+.discord-invite-link {
+  -fx-font-size: 1.1em;
 }
 
 .chat-tab-pane {
